fix z-index in relation to feedback button

--- a/packages/assets/scss/02-molecules/_map-leaflet.scss
+++ b/packages/assets/scss/02-molecules/_map-leaflet.scss
@@ -19,6 +19,7 @@
 
   &__map {
     height: 360px;
+    z-index: 10;
 
     @media ($bp-x-small-min) {
       height: 500px;
